# firefly-dworkers

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  contributing.md  design-pipeline.md  getting-started.md  index.md
docs/autonomy/: overview.md
docs/knowledge/: overview.md
docs/orchestration/: overview.md
docs/plans/: 2026-02-16-agent-ux-claude-code-parity-design.md  2026-02-16-phase1-fix-critical-bugs.md  custom-plans.md  overview.md  templates.md
docs/sdk/: overview.md
docs/tenants/: overview.md
docs/tools/: overview.md  registry.md
docs/verticals/: overview.md
docs/workers/: custom-workers.md  overview.md
examples/: 01_basic_analyst.py  02_research_brief.py  03_data_analysis.py  04_multi_worker_plan.py  05_streaming.py  06_presentation_tool.py  07_document_designer.py  README.md
src/firefly_dworkers/: __init__.py  _version.py  config.py  exceptions.py  types.py
src/firefly_dworkers_cli/: __init__.py  __main__.py  app.py  config.py
src/firefly_dworkers_server/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_config.py  test_install.sh  test_observability.py  test_types.py
tests/test_autonomy/: test_checkpoint.py
tests/test_cli/: test_cli_flags.py  test_commands.py  test_config.py  test_config_user_profile.py
tests/test_design/: test_analyzer.py  test_charts.py  test_converter.py  test_diagrams.py  test_engine.py  test_images.py  test_integration.py  test_models.py  test_pipeline_integration.py  test_preview.py  test_refinement.py  test_validator.py
tests/test_integration/: test_end_to_end.py
tests/test_knowledge/: test_backends.py  test_repository.py
tests/test_orchestration/: test_orchestrator.py  test_workspace.py
tests/test_plans/: test_base.py  test_builder.py
tests/test_prompts/: test_loader.py  test_personality.py  test_skill_prompts.py  test_user_context.py
tests/test_sdk/: test_client.py  test_models.py
tests/test_server/: __init__.py  test_app.py  test_plans_api.py  test_projects_api.py  test_workers_api.py
tests/test_tenants/: test_config.py  test_loader.py
tests/test_tools/: test_design_pipeline.py  test_registry.py  test_toolkits.py
tests/test_tui/: test_agent_lane.py  test_agent_wizard.py  test_app.py  test_app_integration.py  test_backend.py  test_backend_models.py  test_chat_screen.py  test_checkpoint_handler.py  test_commands_router.py  test_compact_prompt.py  test_context.py  test_context_injection.py  test_conversations_screen.py  test_entry_point.py  test_exit.py  test_intent.py  test_interactive_question.py  test_invite_greeting.py  test_local_client.py  test_memory.py  test_plan_detection.py  test_popups.py  test_project_store.py  test_question_queue.py  test_response_timer.py  test_retry_policy.py  test_rich_response.py  test_routing.py  (+12 more)
(+230 files in other folders)
