[project]
name = "firefly-dworkers"
version = "26.02.01"
description = "Digital Workers as a Service (DWaaS) platform built on fireflyframework-genai for consulting firms."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Andres Contreras Guillen" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["dworkers", "digital-workers", "consulting", "genai", "agents"]
dependencies = [
    "fireflyframework-genai[all]>=26.02.01",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
]
sharepoint = [
    "msal>=1.31.0",
    "office365-rest-python-client>=2.5.0",
]
google = [
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.0",
]
confluence = [
    "atlassian-python-api>=3.41.0",
]
jira = [
    "atlassian-python-api>=3.41.0",
]
slack = [
    "slack-sdk>=3.33.0",
]
teams = [
    "msgraph-sdk>=1.12.0",
]
email = [
    "aiosmtplib>=3.0.0",
]
browser = [
    "flybrowser>=26.02.01",
]
data = [
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
cli = [
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
]
presentation = ["python-pptx>=1.0.0"]
document = ["python-docx>=1.1.0"]
pdf = ["weasyprint>=62.0"]
all = [
    "firefly-dworkers[web,browser,sharepoint,google,confluence,jira,slack,teams,email,data,server,cli,presentation,document,pdf]",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
dworkers = "firefly_dworkers_cli.app:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
fireflyframework-genai = { path = "../../fireflyframework/fireflyframework-genai" }
flybrowser = { path = "../flybrowser" }

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TC"]
ignore = ["E501", "TC001", "TC002", "TC003", "UP040", "UP046", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["firefly_dworkers", "firefly_dworkers_cli", "firefly_dworkers_server"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
